--- a/turtlebot3_autorace_2020/turtlebot3_autorace_camera/calibration/intrinsic_calibration/camerav2_320x240_30fps.yaml
+++ b/turtlebot3_autorace_2020/turtlebot3_autorace_camera/calibration/intrinsic_calibration/camerav2_320x240_30fps.yaml
@@ -4,14 +4,14 @@ camera_name: narrow_stereo
 camera_matrix:
   rows: 3
   cols: 3
-  data: [153.53337,   0.     , 150.50761,
-           0.     , 153.62598, 118.64754,
+  data: [120.48881,   0.36854, 157.79144,
+           0.     , 122.41662, 119.75444,
            0.     ,   0.     ,   1.     ]
-distortion_model: plumb_bob
+distortion_model: equidistant
 distortion_coefficients:
   rows: 1
-  cols: 5
-  data: [-0.318094, 0.090092, 0.000346, -0.000410, 0.000000]
+  cols: 4
+  data: [-0.454400, 1.751421, -1.635337, 0.356801]
 rectification_matrix:
   rows: 3
   cols: 3
@@ -21,6 +21,6 @@ rectification_matrix:
 projection_matrix:
   rows: 3
   cols: 4
-  data: [114.52666,   0.     , 149.9963 ,   0.     ,
-           0.     , 117.29741, 117.67028,   0.     ,
+  data: [120.48881,   0.36854, 157.79144,   0.     ,
+           0.     , 122.41662, 119.75444,   0.     ,
            0.     ,   0.     ,   1.     ,   0.     ]
